<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:isScrollContainer="true"
    android:id="@+id/hoa_don">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp">
    <include
        android:id="@+id/action_bar_up"
        layout="@layout/actionbar_up"
        app:layout_constraintBottom_toBottomOf="parent" />
    <include
        android:id="@+id/item_suat_chieu"
        layout="@layout/item_suat_chieu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_info"
        android:textSize="18dp"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:padding="8dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/thong_tin_ve"
            layout="@layout/thong_tin_ve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"

                android:text="@string/quantity"/>
            <TextView
                android:id="@+id/txt_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="1"
                android:gravity="end"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/sum"/>
            <TextView
                android:id="@+id/txt_sum_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="0 đ"
                android:gravity="end"
                />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snack_info"
            android:textSize="18dp"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/sum"/>
            <TextView
                android:id="@+id/txt_sum_snacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="0 đ"
                android:gravity="end"
                />


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:textSize="18dp"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:padding="8dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/all_sum"/>
            <TextView
                android:id="@+id/txt_all_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="0 đ"
                android:gravity="end"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/discount"/>
            <TextView
                android:id="@+id/txt_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="0 đ"
                android:gravity="end"
                />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/change"/>
            <TextView
                android:id="@+id/txt_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="0 đ"
                android:gravity="end"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/bidv"/>

            <CheckBox
                android:id="@+id/chb_bidv"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:gravity="center_vertical"
                android:scaleX="0.7"
                android:scaleY="0.7"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/vcb"/>
            <CheckBox
                android:id="@+id/chb_vcb"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:gravity="center_vertical"
                android:scaleX="0.7"
                android:scaleY="0.7"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/momo"/>
            <CheckBox
                android:id="@+id/chb_momo"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:gravity="center_vertical"
                android:scaleX="0.7"
                android:scaleY="0.7"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:textSize="18dp"
            android:background="@drawable/bg_unselected_date"
            app:backgroundTint="@color/green"
            android:layout_margin="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>